src/test/resources/semantic_errors/while_bool_or_void.notc
void main() {
    while (true || f()) {
    }
}

void f() {
}
